--- a/css/estilo.css
+++ b/css/estilo.css
@@ -11,120 +11,116 @@ html * {
  box-sizing: border-box;
 }
 
-
 body {
-  background: #395284;
-  font-family: "Audiowide";
-  font-size: 100%;
-  color: #31353d;
+ background: 
+    radial-gradient(circle, transparent 20%, #1abc9c 20%, #1abc9c 80%, transparent 80%, transparent),
+    radial-gradient(circle, transparent 20%, #1abc9c 20%, #1abc9c 80%, transparent 80%, transparent) 50px 50px,
+    linear-gradient(#242423 8px, transparent 8px) 0 -4px,
+    linear-gradient(90deg, #242423 8px, transparent 8px) -4px 0;
+  background-color: #1abc9c;
+  background-size: 100px 100px, 100px 100px, 50px 50px, 50px 50px;
+
+ font-family: "Audiowide";
+ font-size: 100%;
+ color: #31353d;
 
 }
+
 header {
  position: relative;
  text-align: center;
- padding-top: 110px;
- padding-bottom: 60px;
- background: #ffc554 fixed;
+ padding-top: 20px;
+ padding-bottom: 80px;
+ background-color:  #F5CB5C;
  background-size: cover;
  width: 100%;
  height: auto;
  box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 
-nav {
-  font-size: 16px;
-  box-shadow: 0px 0px 10px rgba(0,0,0,1);
-  background: #31353d;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 80px;
-  padding: 10px 35px;
-  box-sizing: border-box;
-  z-index: 999;
+
+
+.btn {
+  margin: 0px;
+  position: relative;
+ font-family: "Audiowide";
+ margin-left: 84%;
+ border: 0px;
+ padding: 22px 32px;
+ cursor: pointer;
+ transform: skew(-25deg);
 }
-
-
-
-nav .logo {
-  padding: 8px 0;
-  
-  float: left;
-}
-
-
-nav ul {
-
-  list-style: none;
-  float: right;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-
-nav ul li{
-  list-style: none;
-}
-
-nav ul li a{
-  line-height: 65px;
+.active a{
   color: #fff;
-  padding: 12px 30px;
+  font-size: 15px;
+  display: block;
   text-decoration: none;
-  margin-right: 10px;
-}
-
-
-nav ul li a:focus{
-  outline: none;
+  transform: skew(25deg);
 }
 
 .active{
- background: #395284;
- color: #fff;
- border-radius: 6px;
-  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+ background: #242423;
+ border-radius: 8px;
+ box-shadow: 0px 0px 4px rgba(0,0,0,1);
 }
-.active:hover{
-  color: #31353d;
-  border-radius: 6px;
-   transition: color 0.1s linear 0s;
-}
-.color:hover
-{
-    color: #31353d;
-  background: #ffc554;
-  border-radius: 6px;
-   transition: color 0.1s linear 0s;
-    box-shadow: 0px 0px 10px rgba(0,0,0,1);
-}
+
+
 
 
 /*----fimheader*/
-h1#Home {
-  color: #fff;
-  background-color: #31353d;
-  font-size: 25px;
-  margin-top: 0px;
+
+.skew-menu {
   text-align: center;
+  margin-top: 2em;
+}
+.skew-menu ul {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  transform: skew(-25deg);
+}
+.skew-menu ul li {
+  background: #fff;
+  float: left;
+  border-right: 1px solid #eee;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  text-transform: uppercase;
+  color: #555;
+  font-weight: bolder;
+  transition: all 0.3s linear;
+}
+.skew-menu ul li:first-child {
+  border-radius: 7px 0 0 7px;
+}
+.skew-menu ul li:last-child {
+  border-right: none;
+  border-radius: 0 7px 7px 0;
+}
+.skew-menu ul li:hover {
+  background-color: #242423; 
+  color: #fff;
+}
+.skew-menu ul li a {
+  font-size: 13px;
+  display: block;
+  padding: 2em 4em;
+  color: inherit;
+  text-decoration: none;
+  transform: skew(25deg);
 }
 
-.main-conteudo h2{
-  text-align: center;
-  border-bottom: 2px solid black;
-}
 
 /* Column container */
 
 
 .Interface {  
-  background: #fff;
+  background: #F5CB5C;
   color: #aaa;
-  width: 1200px;
-  max-width: 90%;
+  width: 1100px;
+  max-width: 95%;
   margin: 5.5% auto;
-  margin-top: -1%;
+  margin-top: 2%;
   padding: 4%;
   border-radius: 6px;
   padding-top: 1%;
@@ -141,9 +137,13 @@ h1#Home {
   border-radius: 6px;
   -ms-flex: 70%; /* IE10 */
   flex: 70%;
-  background-color: #ffc554;
+  background-image:;
   padding: 30px;
-  box-shadow: 0px 0px 10px rgba(0,0,0,1); 
+  
+}
+.main-conteudo h2{
+  text-align: center;
+  border-bottom: 2px solid black;
 }
 
 /* Fake imagem, just for this example */
@@ -158,102 +158,38 @@ h1#Home {
   border-radius: 2px;
   font-size: 20px;
   color: white;
-  background: #31353d;
+   background: #242423;
+
   padding: 90px;
   text-align: center;
-   box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
 
 }
-
-
 
 /* teste botao roupa */
 
-.button {
- font-size: 100% center;
- margin-left: 47%;
- background: #4d6b61;
- border: 0;
- border-radius: 50%;
- box-shadow: inset -0.125rem -0.25rem rgba(0,0,0,0.2),
- inset 0.125rem 0.25rem rgba(255,255,255,0.2),
- 0.125rem 0.25rem 0.25rem rgba(0,0,0,0.35);
- color: #4d6b61;
- display: inline-block;
- letter-spacing: 0.38em;
- text-transform: uppercase;
- text-decoration: none;
- text-shadow: 1px 1px 1px rgba(0,0,0,.6), -1px -1px 1px rgba(255,255,255,0.4);
- height: 8rem;
- width: 8rem;
- position: relative;
- z-index: 1;
+/* Back to top button style */
+.to-top {
+  position: fixed;
+  z-index: 9999;
+  bottom: 5px;
+  right: 6px;
+  display: none;
 }
-
-.button::before {
-  content: '';
-  border-radius: 50%;
-  box-shadow: inset -0.0625rem -0.125rem rgba(255,255,255,0.2),
-  inset 0.0625rem 0.125rem rgba(0,0,0,0.2);
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
-  height: 6rem;
-  width: 6rem;
+.to-top a.back-to-top {
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  color: #fff;
+  font-size: 3em;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  border-radius: 5px;
+  background-color: #242423;
+  opacity: 0.7;
+  transition: 0.3s;
 }
-
-.button::after {
-  content: '';
-  border-radius: 50%;
-  box-shadow: 2.45rem 2.45rem #462227,
-  2.45rem 4.45rem #462227,
-  4.45rem 2.45rem #462227,
-  4.45rem 4.45rem #462227,
-  2.55rem 2.55rem rgba(255,255,255,0.2),
-  2.55rem 4.55rem rgba(255,255,255,0.2),
-  4.55rem 2.55rem rgba(255,255,255,0.2),
-  4.55rem 4.55rem rgba(255,255,255,0.2),
-  2.35rem 2.35rem rgba(0,0,0,0.2),
-  2.35rem 4.35rem rgba(0,0,0,0.2),
-  4.35rem 2.35rem rgba(0,0,0,0.2),
-  4.35rem 4.35rem rgba(0,0,0,0.2);
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 1rem;
-  width: 1rem;
-}
-
-.button:focus {
-  background: #56796d;
-  outline:0;
-}
-
-.button:active {
-  transform: scale(0.98,0.98);
-}
-
-/*parallax*/
-.section{
-  position: relative;
-
-}
-#second .caption{
-  top: 150px;
-  right: 100px;
-} 
-
-#second{
-  background: url(../imgpara/second.jpg) 50% 0 no-repeat fixed;
-  color: white;
-  height: 1000px;
-  margin: 0 auto;
-  overflow: hidden;
-  padding: 0;
-  z-index: -1;
-}
-.shoe{
-  background: url(../imgpara/third.png) 50% 0 no-repeat fixed;
-  height: 1000px;
-  z-index: -1;
+.to-top a.back-to-top:hover {
+  opacity: 1;
 }
