--- a/css/passeio.css
+++ b/css/passeio.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Audiowide|Orbitron|Press+Start+2P');
-
 /* -------------------------------- 
              Passeio
 -------------------------------- */
@@ -13,199 +12,131 @@ html * {
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
 }
-
 body {
-  background-color: #395284;
-  font-size: 100%;
-  font-family: "Audiowide";
-  color: #31353d;
+  background: 
+    radial-gradient(circle, transparent 20%, #1abc9c 20%, #1abc9c 80%, transparent 80%, transparent),
+    radial-gradient(circle, transparent 20%, #1abc9c 20%, #1abc9c 80%, transparent 80%, transparent) 50px 50px,
+    linear-gradient(#242423 8px, transparent 8px) 0 -4px,
+    linear-gradient(90deg, #242423 8px, transparent 8px) -4px 0;
+  background-color: #1abc9c;
+  background-size: 100px 100px, 100px 100px, 50px 50px, 50px 50px;
+
+ font-family: "Audiowide";
+ font-size: 100%;
+ color: #31353d;
   
 }
 header {
- position: relative;
- text-align: center;
  padding-top: 20px;
- padding-bottom: 0px;
- background: #ffc554 ;
+ padding-bottom: 20px;
+ background-color: #F5CB5C;
  background-size: cover;
  width: 100%;
  height: auto;
  box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
-a {
-  color: #435779;
-  text-decoration: none;
-}
+
+/*---Slider---*/
+.containerslide {
+  background-color: white;
+    margin: 20px auto;
+    width: 90%;
+    height: 500px;
+    overflow: hidden;
+    border: 15px solid;
+    border-top-color: #242423;
+    border-left-color: #242423;
+    border-bottom-color: #242423;
+    border-right-color: #242423;
+    position: relative;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  }
+  
+  .photo {
+    position: absolute;
+    animation: round 16s infinite;
+    opacity: 0;
+    width: 100%;
+    height: auto;
+  }
+  
+@keyframes round {
+    25% {
+      opacity: 1;
+    }
+    40% {
+      opacity: 0;
+    }
+  }
+  img:nth-child(1) {
+    max-width: 100%;
+    animation-delay: 12s;
+  }
+  
+  img:nth-child(2) {
+    animation-delay: 8s;
+  }
+  
+  img:nth-child(3) {
+    animation-delay: 4s;
+  }
+  
+  img:nth-child(4) {
+    animation-delay: 0s;
+  }
+  
 
 /*navbar*/
-nav {
-  font-size: 16px;
-  
-  background: #31353d;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 80px;
-  padding: 10px 35px;
-  box-sizing: border-box;
-  z-index: 999;
+.skew-menu {
+  text-align: center;
+  margin-top: 2em;
 }
-
-
-
-nav .logo {
-  padding: 8px 0;
-  
-  float: left;
-}
-
-
-nav ul {
-
-  list-style: none;
-  float: right;
+.skew-menu ul {
+  display: inline-block;
   margin: 0;
   padding: 0;
-  display: flex;
-}
-
-nav ul li{
   list-style: none;
+  transform: skew(-25deg);
 }
-
-nav ul li a{
-  line-height: 65px;
-  color: #fff;
-  padding: 12px 30px;
-  text-decoration: none;
-  margin-right: 10px;
-}
-
-
-nav ul li a:focus{
-  outline: none;
-}
-
-.active{
- background: #395284;
- color: #fff;
- border-radius: 6px;
+.skew-menu ul li {
+  background: #fff;
+  float: left;
+  border-right: 1px solid #eee;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  text-transform: uppercase;
+  color: #555;
+  font-weight: bolder;
+  transition: all 0.3s linear;
 }
-.active:hover{
-  color: #31353d;
-  border-radius: 6px;
-   transition: color 0.1s linear 0s;
+.skew-menu ul li:first-child {
+  border-radius: 7px 0 0 7px;
 }
-.color:hover
-{
-    color: #31353d;
-  background: #ffc554;
-  border-radius: 6px;
-   transition: color 0.1s linear 0s;
-    box-shadow: 0px 0px 10px rgba(0,0,0,1);
+.skew-menu ul li:last-child {
+  border-right: none;
+  border-radius: 0 7px 7px 0;
 }
+.skew-menu ul li:hover {
+  background-color: #242423;
+  color: #fff;
+}
+.skew-menu ul li a {
+  font-size: 13px;
+  display: block;
+  padding: 2em 4em;
+  color: inherit;
+  text-decoration: none;
+  transform: skew(25deg);
+}
+
 
 /*----fimheader*/
 
-h1#Tour {
-  color: #fff;
-  background-color: #31353d;
-  font-size: 25px;
-  margin-top: 0px;
-  text-align: center;
-}
-/*
-[Botones-Control] 
- */
- .control-buttons {
-  margin-top: 15px;
-  text-align: center;
-}
 
-.control-buttons li {
-  cursor: pointer;
-  display: inline-block;
-  background: #424f66;
-  text-indent: -99999px;
-  height: 12px;
-  width: 12px;
-  margin: 0 6px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-}
 
-.control-buttons li.active {
-  background: #00c5b9;
-}
 
 /* teste botao roupa */
 
-.button {
- font-size: 100% center;
- margin-left: 47%;
- background: #4d6b61;
- border: 0;
- border-radius: 50%;
- box-shadow: inset -0.125rem -0.25rem rgba(0,0,0,0.2),
- inset 0.125rem 0.25rem rgba(255,255,255,0.2),
- 0.125rem 0.25rem 0.25rem rgba(0,0,0,0.35);
- color: #4d6b61;
- display: inline-block;
- letter-spacing: 0.38em;
- text-transform: uppercase;
- text-decoration: none;
- text-shadow: 1px 1px 1px rgba(0,0,0,.6), -1px -1px 1px rgba(255,255,255,0.4);
- height: 8rem;
- width: 8rem;
- position: relative;
- z-index: 1;
-}
-
-.button::before {
-  content: '';
-  border-radius: 50%;
-  box-shadow: inset -0.0625rem -0.125rem rgba(255,255,255,0.2),
-  inset 0.0625rem 0.125rem rgba(0,0,0,0.2);
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
-  height: 6rem;
-  width: 6rem;
-}
-
-.button::after {
-  content: '';
-  border-radius: 50%;
-  box-shadow: 2.45rem 2.45rem #462227,
-  2.45rem 4.45rem #462227,
-  4.45rem 2.45rem #462227,
-  4.45rem 4.45rem #462227,
-  2.55rem 2.55rem rgba(255,255,255,0.2),
-  2.55rem 4.55rem rgba(255,255,255,0.2),
-  4.55rem 2.55rem rgba(255,255,255,0.2),
-  4.55rem 4.55rem rgba(255,255,255,0.2),
-  2.35rem 2.35rem rgba(0,0,0,0.2),
-  2.35rem 4.35rem rgba(0,0,0,0.2),
-  4.35rem 2.35rem rgba(0,0,0,0.2),
-  4.35rem 4.35rem rgba(0,0,0,0.2);
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 1rem;
-  width: 1rem;
-}
-
-.button:focus {
-  background: #56796d;
-  outline:0;
-}
-
-.button:active {
-  transform: scale(0.98,0.98);
-}
 
 /*--------------------*/
 
@@ -213,9 +144,9 @@ h1#Tour {
   background: #fff;
   color: #aaa;
   width: 1200px;
-  max-width: 90%;
+  max-width: 95%;
   margin: 5.5% auto;
-  margin-top: -1%;
+  margin-top: 2%;
   padding: 4%;
   border-radius: 6px;
   padding-top: 1%;
@@ -225,118 +156,81 @@ h1#Tour {
 
 /* produtos*/
 
-.post-slide{
-    margin: 0 10px;
-  }
-  .post-slide .post-info{
-    padding: 5px 0;
-    margin: 0;
-    list-style: none;
-  }
+.container {
+  display: flex;
+  justify-content: center;
 
-  .post-slide .post-info li{
-    display: inline-block;
-    margin: 0 5px;
-  }
+}
 
-  .post-slide .post-info li i{
-    margin-right: 8px;
-  }
+#tipo{
+  text-align: center;
+  color: #fff;
 
-  .post-slide .post-info li a{
-    font-size: 11px;
-    font-weight: bold;
-    color: #7e828a;
-    text-transform: uppercase;
-  }
+}
 
-  .post-slide .post-info li a:hover{
-    color: deepskyblue;
-    text-decoration: none;
-  }
+.example {
+  display: flex;
+  justify-content: space-around;
+  
+  width: 1100px;
+  margin: 50px 0;
+  background-color: ;
+}
 
-  .post-slide .post-img{
-    position: relative;
-  }
+.item img {
+  display: block;
+   width: 320px;
+  height: 380px;
+  background-color: #F5CB5C;
+  border-radius: 5px;
+  border: 4px solid #242423;
+  
+}
 
-  .post-slide .post-img:before{
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    background: rgba(0,0,0,0.6);
-    transition: opacity 0.40s linear 0s;
-  }
-
-  .post-slide:hover .post-img:before{
-    opacity: 1;
-  }
-
-  .post-slide .post-img img{
-    width: 100%;
-    height: auto;
-  }
-
-  .post-slide .read{
-    position: absolute;
-    bottom: 30px;
-    left: 50px;
-    font-size: 14px;
-    color: white;
-    text-transform: capitalize;
-    opacity: 0;
-    transition: all 0.40s linear 0s;
-
-  }
-
-  .post-slide .post-content{
-    padding: 40px 0;
-    position: relative;
-  }
-
-  .post-slide .post-author{
-    width: 75px;
-    height: 75px;
-    border-radius: 50%;
-    position: absolute;
-    top: -45px;
-    right: 10px;
-    overflow: hidden;
-    border: 4px solid white;
-  }
-
-  .post-slide .post-author img{
-    width: 100%;
-    height: auto;
-  }
-
-  .post-slide .post-title{
-    font-size: 14px;
-    font-weight: bold;
-    color: deepskyblue;
-    margin: 0 0 10px 0;
-    text-transform: uppercase;
-    transition: all 0.30s linear 0s;
-  }
-
-  .post-slide .post-description{
-    font-size: 13px;
-    color: #555;
-    margin-bottom: 20px;
-  }
-
-
+#text{
+  padding: 10px;
+  width: 320px;
+  height: 80px;
+  background-color: white;
+  border-radius: 5px;
+  text-align: center;
+   border: 4px solid #242423;
+}
+/*----Fimproduto---*/
 
 .footer {
   border-radius: 2px;
   font-size: 20px;
   color: white;
-  background: #31353d;
+  background: #242423;
   padding: 90px;
   text-align: center;
    box-shadow: 0px 0px 10px rgba(0,0,0,1);
 
+}
+
+/* Back to top button style */
+.to-top {
+  position: fixed;
+  z-index: 9999;
+  bottom: 5px;
+  right: 6px;
+  display: none;
+}
+.to-top a.back-to-top {
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  color: #fff;
+  font-size: 3em;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  border-radius: 5px;
+  background-color: #242423;
+  opacity: 0.7;
+  transition: 0.3s;
+}
+.to-top a.back-to-top:hover {
+  opacity: 1;
 }
